--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,17 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(216, 216, 216);
+  border-radius: 40px;
+}
+::-webkit-scrollbar-track {
+  background-color: #121212;
+}
+
 .animated-container {
   display: inline-flex!important;
   text-align: center
